# tg-event-scheduler

./: .env.example  .gitpod.yml  Cargo.toml  Dockerfile  README.md  fly.toml  main.ts
src/: bot.rs  events_db.rs  main.rs  notifier.rs
