[package]
name = "tg-event-scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
teloxide = { version = "0.11", features = ["macros", "auto-send", "webhooks-axum"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
mongodb = { version = "2.3.0", features = ["bson-chrono-0_4"] }
anyhow = "1.0.34"
serde = { version = "1.0", features = ["derive"] }
warp = "0.3"
futures = "0.3.24"
chrono = "0.4.22"
chrono-english = "0.1.7"
parse_duration = "2.1.1"

[[bin]]
name = "tg-event-scheduler"
path = "src/main.rs"
